# Finance-app

./: API.md  LICENSE  README.md  analysis.py  app.py  cli.py  core.py  main.py  parameters.py  pyproject.toml  requirements.txt  run_api.py  save.json  sort_utils.py  storage.py  test.py  utils.py
.agent/workflows/: start_app.md
Core/: analysis.py
api_server/: app.py  deps.py  errors.py  schemas.py  settings.py
api_server/routers/: health.py  history.py  import_pdf.py  saves.py  summary.py  transactions.py
api_server/services/: __init__.py  finance_service.py  save_registry.py  tx_id.py
cli/: cli.py  helper.py  prettyprint.py  prompts.py
cli/cli_hub_modules/: __init__.py  analyze_hub.py  calc_hub.py  edit_hub.py  main_hub.py  pdf_import_hub.py  prehub.py  summary_hub.py  undoredo_hub.py
config/: __init__.py  calc_summary.py  params.py  schema.py  style.py  text.py
core/: calc_utils.py  config.py  core_config.py  engine.py  errors.py  models.py  ports.py  sort_utils.py  storage.py  sum_utils.py
docs/: api.md
frontend_streamlit/: README.md  app.py  requirements.txt
frontend_streamlit/.streamlit/: config.toml
frontend_streamlit/scripts/: run_local.ps1  run_local.sh
infra/: storage_json.py
pdf_handeling/: api.py  format.py  format_rawdata.py  general_extract_rawdata.py  ideas.txt  manual_data_mapper.py  parameter.py  pdf_main.py  pdf_test.py  rawdata.py
pdf_handeling/erste_bank/: __init__.py  erste_format_rawdata.py  erste_manual_data_mapper.py  parser.py
scripts/: dev_smoke_test.py  freeze_regression_check.py  run_api.py  run_cli.py
(+88 files in other folders)
